--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,14 +11,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
+      # 1. Vérifie le code source
+      - uses: actions/checkout@v3
 
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'temurin'
-        java-version: 17
+      # 2. Configure Java 17 (ajoute la distribution)
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'   # <- obligatoire maintenant
+          java-version: '17'
+          cache: 'maven'            # <- cache le dossier local Maven pour accélérer le build
 
-    - name: Build with Maven
-      run: mvn clean package
-      working-directory: demo-app
+      # 3. Build le projet avec Maven
+      - name: Build with Maven
+        run: mvn clean package
+
+      # 4. Optionnel : exécuter les tests
+      - name: Run tests
+        run: mvn test
