--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,20 +12,21 @@ jobs:
 
     steps:
       # 1. Vérifie le code source
-      - uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-      # 2. Configure Java 17 (ajoute la distribution)
+      # 2. Configure Java 17 (distribution obligatoire)
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'   # <- obligatoire maintenant
+          distribution: 'temurin'   # obligatoire
           java-version: '17'
-          cache: 'maven'            # <- cache le dossier local Maven pour accélérer le build
+          cache: 'maven'            # optionnel mais recommandé pour accélérer le build
 
       # 3. Build le projet avec Maven
       - name: Build with Maven
-        run: mvn clean package
+        run: mvn clean package -B
 
-      # 4. Optionnel : exécuter les tests
+      # 4. Exécuter les tests (optionnel si tu as des tests)
       - name: Run tests
-        run: mvn test
+        run: mvn test -B
