--- a/demo-app/Jenkinsfile
+++ b/demo-app/Jenkinsfile
@@ -28,6 +28,10 @@ pipeline {
         }
 
         stage('Archive') {
+            when {
+                // Archive uniquement si les tests ont réussi
+                expression { currentBuild.result == null || currentBuild.result == 'SUCCESS' }
+            }
             steps {
                 dir('demo-app') {
                     archiveArtifacts artifacts: 'target/*.jar', fingerprint: true
@@ -36,8 +40,14 @@ pipeline {
         }
 
         stage('Deploy') {
+            when {
+                // Déploiement uniquement si les tests ont réussi
+                expression { currentBuild.result == null || currentBuild.result == 'SUCCESS' }
+            }
             steps {
                 echo 'Déploiement optionnel'
+                // Ici vous pouvez ajouter votre logique de déploiement
+                // Par exemple : docker build, docker push, déploiement sur serveur, etc.
             }
         }
     }
@@ -45,9 +55,46 @@ pipeline {
     post {
         success {
             echo "Pipeline terminé avec succès !"
+            script {
+                // Notification Slack en cas de succès
+                try {
+                    slackSend(
+                        channel: '#devops',
+                        color: 'good',
+                        message: """
+                            ✅ *Pipeline réussi - ${env.JOB_NAME}*
+                            Build #${env.BUILD_NUMBER} terminé avec succès
+                            Branche: ${env.BRANCH_NAME ?: 'main'}
+                            Lien: ${env.BUILD_URL}
+                        """
+                    )
+                } catch (Exception e) {
+                    echo "Erreur lors de l'envoi de la notification Slack: ${e.getMessage()}"
+                }
+            }
         }
         failure {
             echo "Pipeline échoué !"
+            script {
+                // Notification Slack en cas d'échec
+                try {
+                    slackSend(
+                        channel: '#devops',
+                        color: 'danger',
+                        message: """
+                            ❌ *Pipeline échoué - ${env.JOB_NAME}*
+                            Build #${env.BUILD_NUMBER} a échoué
+                            Branche: ${env.BRANCH_NAME ?: 'main'}
+                            Lien: ${env.BUILD_URL}
+                        """
+                    )
+                } catch (Exception e) {
+                    echo "Erreur lors de l'envoi de la notification Slack: ${e.getMessage()}"
+                }
+            }
+        }
+        always {
+            echo "Pipeline terminé"
         }
     }
 }
